--- a/apps/gracelsy-termix/data.yml
+++ b/apps/gracelsy-termix/data.yml
@@ -1,33 +1,85 @@
+# === 官方应用商店兼容字段（上架官方商店必填，其余情况选填）===
+# https://apps.fit2cloud.com/1panel
+# 显示名称
 name: Termix
+# 分类标签
 tags:
   - 工具
   - 终端
+# 副标题
 title: 多功能跨平台终端工具
+# 应用描述
 description: 🖥️ Termix 是一个跨平台的终端工具，支持多种终端协议和插件扩展，帮助开发者更高效地管理和使用命令行环境。
+
+# === 以下为 1Panel 应用商店解析的数据结构，必须保留此结构 ===
 additionalProperties:
+  # === 必填字段 ===
+  # 应用程序唯一标识符，用于系统内部识别及创建文件夹，仅限英文（必填）
   key: gracelsy-termix
+  # 应用程序显示名称（必填）
   name: Termix
+  # 应用程序类型（必填）
+  # 可选值: website: 网站应用，支持在1Panel中一键部署，如 Wordpress、Halo等
+  #        runtime: 运行时环境，如 MySQL、Redis、OpenResty 等
+  #        tool: 工具类应用，大部分应用不属于上述两类的，可归为工具类，如 FileBrowser、phpMyAdmin 等
+  type: website
+  # 分类标签数组，用于应用商店分类显示（必填），可选值可见：https://github.com/1Panel-dev/appstore/blob/dev/data.yaml
   tags:
     - Tool
-    - Terminal
-  shortDescZh: 多功能跨平台终端工具
-  shortDescEn: A versatile cross-platform terminal tool
-  type: website
-  crossVersionUpdate: true
-  limit: 0
-  recommend: 0
-  website: https://github.com/LukeGus/Termix
-  github: https://github.com/LukeGus/Termix
-  document: https://github.com/LukeGus/Termix#readme
+
+  # === 描述信息字段（选填，建议填写）===
+  # 多语言描述，建议20-30个字符，v2 版本格式
   description:
-    en: 🖥️ Termix is a versatile cross-platform terminal tool that supports multiple terminal protocols, plugins, and customizations, making it easier to manage and enhance your command-line experience.
+    # 简体中文
     zh: 🖥️ Termix 是一个多功能的跨平台终端工具，支持多种终端协议、插件与个性化扩展，帮助开发者更高效地管理和优化命令行体验。
-    zh-Hant: 🖥️ Termix 是一個多功能的跨平台終端工具，支援多種終端協議、外掛與自訂擴展，幫助開發者更高效地管理和優化命令列體驗。
+    # 繁体中文
+    zh-hant: 🖥️ Termix 是一個多功能的跨平台終端工具，支援多種終端協議、外掛與自訂擴展，幫助開發者更高效地管理和優化命令列體驗。
+    # 英文
+    en: 🖥️ Termix is a versatile cross-platform terminal tool that supports multiple terminal protocols, plugins, and customizations, making it easier to manage and enhance your command-line experience.
+    # 日语
     ja: 🖥️ Termix は、多くのターミナルプロトコルやプラグイン、カスタマイズに対応した多機能クロスプラットフォームターミナルツールで、コマンドライン体験を効率的に管理・向上させます。
+    # 马来语
     ms: 🖥️ Termix ialah alat terminal merentas platform yang serba boleh, menyokong pelbagai protokol terminal, pemalam dan penyesuaian untuk memudahkan pengurusan serta meningkatkan pengalaman baris perintah.
+    # 巴西葡萄牙语
     pt-br: 🖥️ Termix é uma ferramenta de terminal multiplataforma versátil, com suporte a vários protocolos, plugins e personalizações, tornando a experiência de linha de comando mais eficiente.
+    # 俄语
     ru: 🖥️ Termix — это многофункциональный кроссплатформенный терминал, поддерживающий различные протоколы, плагины и кастомизации, упрощающий работу с командной строкой.
+    # 韩语
     ko: 🖥️ Termix는 다양한 터미널 프로토콜, 플러그인 및 사용자 정의를 지원하는 다기능 크로스플랫폼 터미널 도구로, 명령줄 경험을 보다 효율적으로 관리하고 향상시킬 수 있습니다.
+    # 土耳其语
+    tr: 🖥️ Termix, çoklu terminal protokollerini, eklentileri ve özelleştirmeleri destekleyen çok yönlü çapraz platform terminal aracıdır, komut satırı deneyimini daha verimli yönetmenizi ve geliştirmenizi sağlar.
+
+  # === 功能配置字段（选填）===
+  # 是否支持跨版本更新，默认false
+  crossVersionUpdate: true
+  # 安装数量限制，0表示无限制，默认0
+  limit: 0
+  # 推荐级别，数值越小越推荐，用于应用商店排序，默认9999
+  recommend: 0
+
+  # === 链接信息字段（选填）===
+  # 官方网站链接，必须是有效的 HTTP/HTTPS URL
+  website: https://github.com/LukeGus/Termix
+  # GitHub 仓库链接，必须是有效的HTTP/HTTPS URL
+  github: https://github.com/LukeGus/Termix
+  # 文档链接，必须是有效的HTTP/HTTPS URL
+  document: https://github.com/LukeGus/Termix#readme
+
+  # === 系统要求字段（选填）===
+  # 内存要求（MB），用于系统资源检查和用户提示
+  # 常见值：512, 1024, 2048, 4096
+  # memoryRequired: 512
+  # 支持的 CPU 架构数组
+  # 可选值：amd64, arm64, armv7, ppc64le, s390x, riscv64
   architectures:
     - amd64
     - arm64
+  # 是否需要GPU支持，默认false
+  gpuSupport: false
+  
+  # === 版本兼容性字段（选填）===
+  # 最低面板版本要求，0表示无要求，默认0
+  # 示例：1.0, 1.5, 2.0
+  version: 0
+  # 废弃版本标记，0表示未废弃，默认0，若不为 0，则与当前系统版本号对比，若大于等于该版本号，则不出现在应用商店中
+  deprecated: 0
