--- a/apps/gracelsy-kvrocks/data.yml
+++ b/apps/gracelsy-kvrocks/data.yml
@@ -1,31 +1,84 @@
+# === 官方应用商店兼容字段（上架官方商店必填，其余情况选填）===
+# https://apps.fit2cloud.com/1panel
+# 显示名称
 name: Kvrocks
+# 分类标签
 tags:
-    - 数据库
+  - 数据库
+# 副标题
 title: 基于 RocksDB 的高性能 Redis 兼容数据库
+# 应用描述
 description: 基于 RocksDB 的高性能 Redis 兼容数据库
+
+# === 以下为 1Panel 应用商店解析的数据结构，必须保留此结构 ===
 additionalProperties:
-    key: gracelsy-kvrocks
-    name: Kvrocks
-    tags:
-      - Database
-    shortDescZh: 高性能的 Redis 兼容键值数据库
-    shortDescEn: High-performance Redis-compatible key-value database
-    description:
-        en: A high-performance key-value database compatible with Redis protocol, built on RocksDB
-        ja: RocksDB 上に構築された Redis プロトコル互換の高性能キー・バリューデータベース
-        ms: Pangkalan data nilai-kunci berprestasi tinggi serasi dengan protokol Redis, dibina atas RocksDB
-        pt-br: Banco de dados chave-valor de alto desempenho compatível com o protocolo Redis, baseado em RocksDB
-        ru: Высокопроизводительная база данных ключ-значение, совместимая с протоколом Redis, построенная на RocksDB
-        ko: RocksDB 기반의 Redis 프로토콜 호환 고성능 키-값 데이터베이스
-        zh-hant: 基於 RocksDB 的高性能 Redis 相容鍵值資料庫
-        zh: 基于 RocksDB 的高性能 Redis 兼容数据库
-    type: runtime
-    crossVersionUpdate: false
-    limit: 0
-    recommend: 10
-    website: https://kvrocks.apache.org/
-    github: https://github.com/apache/kvrocks
-    document: https://kvrocks.apache.org/docs/
-    architectures:
-      - amd64
-      - arm64
+  # === 必填字段 ===
+  # 应用程序唯一标识符，用于系统内部识别及创建文件夹，仅限英文（必填）
+  key: gracelsy-kvrocks
+  # 应用程序显示名称（必填）
+  name: Kvrocks
+  # 应用程序类型（必填）
+  # 可选值: website: 网站应用，支持在1Panel中一键部署，如 Wordpress、Halo等
+  #        runtime: 运行时环境，如 MySQL、Redis、OpenResty 等
+  #        tool: 工具类应用，大部分应用不属于上述两类的，可归为工具类，如 FileBrowser、phpMyAdmin 等
+  type: runtime
+  # 分类标签数组，用于应用商店分类显示（必填），可选值可见：https://github.com/1Panel-dev/appstore/blob/dev/data.yaml
+  tags:
+    - Database
+
+  # === 描述信息字段（选填，建议填写）===
+  # 多语言描述，建议20-30个字符，v2 版本格式
+  description:
+    # 简体中文
+    zh: 基于 RocksDB 的高性能 Redis 兼容数据库
+    # 繁体中文
+    zh-hant: 基於 RocksDB 的高性能 Redis 相容鍵值資料庫
+    # 英文
+    en: A high-performance key-value database compatible with Redis protocol, built on RocksDB
+    # 日语
+    ja: RocksDB 上に構築された Redis プロトコル互換の高性能キー・バリューデータベース
+    # 马来语
+    ms: Pangkalan data nilai-kunci berprestasi tinggi serasi dengan protokol Redis, dibina atas RocksDB
+    # 巴西葡萄牙语
+    pt-br: Banco de dados chave-valor de alto desempenho compatível com o protocolo Redis, baseado em RocksDB
+    # 俄语
+    ru: Высокопроизводительная база данных ключ-значение, совместимая с протоколом Redis, построенная на RocksDB
+    # 韩语
+    ko: RocksDB 기반의 Redis 프로토콜 호환 고성능 키-값 데이터베이스
+    # 土耳其语
+    tr: RocksDB üzerine inşa edilmiş, Redis protokolü ile uyumlu yüksek performanslı anahtar-değer veritabanı
+
+  # === 功能配置字段（选填）===
+  # 是否支持跨版本更新，默认false
+  crossVersionUpdate: false
+  # 安装数量限制，0表示无限制，默认0
+  limit: 0
+  # 推荐级别，数值越小越推荐，用于应用商店排序，默认9999
+  recommend: 10
+
+  # === 链接信息字段（选填）===
+  # 官方网站链接，必须是有效的 HTTP/HTTPS URL
+  website: https://kvrocks.apache.org/
+  # GitHub 仓库链接，必须是有效的HTTP/HTTPS URL
+  github: https://github.com/apache/kvrocks
+  # 文档链接，必须是有效的HTTP/HTTPS URL
+  document: https://kvrocks.apache.org/docs/
+
+  # === 系统要求字段（选填）===
+  # 内存要求（MB），用于系统资源检查和用户提示
+  # 常见值：512, 1024, 2048, 4096
+  # memoryRequired: 512
+  # 支持的 CPU 架构数组
+  # 可选值：amd64, arm64, armv7, ppc64le, s390x, riscv64
+  architectures:
+    - amd64
+    - arm64
+  # 是否需要GPU支持，默认false
+  gpuSupport: false
+  
+  # === 版本兼容性字段（选填）===
+  # 最低面板版本要求，0表示无要求，默认0
+  # 示例：1.0, 1.5, 2.0
+  version: 0
+  # 废弃版本标记，0表示未废弃，默认0，若不为 0，则与当前系统版本号对比，若大于等于该版本号，则不出现在应用商店中
+  deprecated: 0
