--- a/apps/gracelsy-lunatv/data.yml
+++ b/apps/gracelsy-lunatv/data.yml
@@ -1,31 +1,84 @@
+# === 官方应用商店兼容字段（上架官方商店必填，其余情况选填）===
+# https://apps.fit2cloud.com/1panel
+# 显示名称
 name: MoonTV(LunaTV)
+# 分类标签
 tags:
   - 多媒体
+# 副标题
 title: 开箱即用的跨平台影视聚合播放器
+# 应用描述
 description: 🎬 MoonTV 是一个开箱即用的、跨平台的影视聚合播放器，支持多资源搜索、在线播放、收藏同步、播放记录等功能。
+
+# === 以下为 1Panel 应用商店解析的数据结构，必须保留此结构 ===
 additionalProperties:
+  # === 必填字段 ===
+  # 应用程序唯一标识符，用于系统内部识别及创建文件夹，仅限英文（必填）
   key: gracelsy-lunatv
+  # 应用程序显示名称（必填）
   name: MoonTV(LunaTV)
+  # 应用程序类型（必填）
+  # 可选值: website: 网站应用，支持在1Panel中一键部署，如 Wordpress、Halo等
+  #        runtime: 运行时环境，如 MySQL、Redis、OpenResty 等
+  #        tool: 工具类应用，大部分应用不属于上述两类的，可归为工具类，如 FileBrowser、phpMyAdmin 等
+  type: website
+  # 分类标签数组，用于应用商店分类显示（必填），可选值可见：https://github.com/1Panel-dev/appstore/blob/dev/data.yaml
   tags:
     - Media
-  shortDescZh: 开箱即用的跨平台影视聚合播放器
-  shortDescEn: Out-of-the-box cross-platform video aggregation player
-  type: website
-  crossVersionUpdate: true
-  limit: 0
-  recommend: 0
-  website: https://github.com/MoonTechLab/LunaTV/
-  github: https://github.com/MoonTechLab/LunaTV/
-  document: https://github.com/MoonTechLab/LunaTV/
+
+  # === 描述信息字段（选填，建议填写）===
+  # 多语言描述，建议20-30个字符，v2 版本格式
   description:
-    en: 🎬 MoonTV is an out-of-the-box, cross-platform video aggregation player built with Next.js 14, Tailwind CSS, and TypeScript. It supports multi-source search, online playback, sync of favorites and watch history, local/cloud storage, and more.
+    # 简体中文
     zh: 🎬 MoonTV 是一个开箱即用的、跨平台的影视聚合播放器，基于 Next.js 14 + Tailwind CSS + TypeScript 构建，支持多资源搜索、在线播放、收藏同步、播放记录、本地/云端存储等功能。
-    zh-Hant: 🎬 MoonTV 是一個開箱即用的、跨平台的影視聚合播放器，基於 Next.js 14 + Tailwind CSS + TypeScript 構建，支援多資源搜尋、線上播放、收藏同步、播放記錄、本地/雲端儲存等功能。
+    # 繁体中文
+    zh-hant: 🎬 MoonTV 是一個開箱即用的、跨平台的影視聚合播放器，基於 Next.js 14 + Tailwind CSS + TypeScript 構建，支援多資源搜尋、線上播放、收藏同步、播放記錄、本地/雲端儲存等功能。
+    # 英文
+    en: 🎬 MoonTV is an out-of-the-box, cross-platform video aggregation player built with Next.js 14, Tailwind CSS, and TypeScript. It supports multi-source search, online playback, sync of favorites and watch history, local/cloud storage, and more.
+    # 日语
     ja: 🎬 MoonTV は、Next.js 14 + Tailwind CSS + TypeScript で構築された、すぐに使えるクロスプラットフォーム動画アグリゲーションプレーヤーです。複数ソース検索、オンライン再生、お気に入りや視聴履歴の同期、ローカル/クラウド保存などをサポートします。
+    # 马来语
     ms: 🎬 MoonTV ialah pemain agregasi video merentas platform yang siap digunakan, dibina dengan Next.js 14, Tailwind CSS, dan TypeScript. Menyokong carian berbilang sumber, main balik dalam talian, penyelarasan kegemaran dan sejarah tontonan, serta storan tempatan/awan.
+    # 巴西葡萄牙语
     pt-br: 🎬 MoonTV é um reprodutor de agregação de vídeos multiplataforma pronto para uso, construído com Next.js 14, Tailwind CSS e TypeScript. Suporta pesquisa multi-fonte, reprodução online, sincronização de favoritos e histórico, armazenamento local/nuvem e muito mais.
+    # 俄语
     ru: 🎬 MoonTV — это готовый к использованию кроссплатформенный агрегатор видео, построенный на Next.js 14, Tailwind CSS и TypeScript. Поддерживает многопоисковый режим, онлайн-воспроизведение, синхронизацию избранного и истории просмотров, локальное/облачное хранение и многое другое.
+    # 韩语
     ko: 🎬 MoonTV는 Next.js 14, Tailwind CSS, TypeScript로 제작된 즉시 사용 가능한 크로스플랫폼 동영상 통합 플레이어입니다. 다중 소스 검색, 온라인 재생, 즐겨찾기 및 시청 기록 동기화, 로컬/클라우드 저장 등을 지원합니다.
+    # 土耳其语
+    tr: 🎬 MoonTV, Next.js 14, Tailwind CSS ve TypeScript ile yapılmış, kullanıma hazır çapraz platform video agregasyon oynatıcıdır. Çok kaynaklı arama, çevrimiçi oynatma, favori ve izleme geçmişi senkronizasyonu, yerel/bulut depolama gibi özellikleri destekler.
+
+  # === 功能配置字段（选填）===
+  # 是否支持跨版本更新，默认false
+  crossVersionUpdate: true
+  # 安装数量限制，0表示无限制，默认0
+  limit: 0
+  # 推荐级别，数值越小越推荐，用于应用商店排序，默认9999
+  recommend: 0
+
+  # === 链接信息字段（选填）===
+  # 官方网站链接，必须是有效的 HTTP/HTTPS URL
+  website: https://github.com/MoonTechLab/LunaTV/
+  # GitHub 仓库链接，必须是有效的HTTP/HTTPS URL
+  github: https://github.com/MoonTechLab/LunaTV/
+  # 文档链接，必须是有效的HTTP/HTTPS URL
+  document: https://github.com/MoonTechLab/LunaTV/
+
+  # === 系统要求字段（选填）===
+  # 内存要求（MB），用于系统资源检查和用户提示
+  # 常见值：512, 1024, 2048, 4096
+  # memoryRequired: 512
+  # 支持的 CPU 架构数组
+  # 可选值：amd64, arm64, armv7, ppc64le, s390x, riscv64
   architectures:
     - amd64
     - arm64
+  # 是否需要GPU支持，默认false
+  gpuSupport: false
+  
+  # === 版本兼容性字段（选填）===
+  # 最低面板版本要求，0表示无要求，默认0
+  # 示例：1.0, 1.5, 2.0
+  version: 0
+  # 废弃版本标记，0表示未废弃，默认0，若不为 0，则与当前系统版本号对比，若大于等于该版本号，则不出现在应用商店中
+  deprecated: 0
