modified:  apps/gracelsy-1panel-apps/latest/data.yml 	deleted:    apps/gracelsy-cloudflared/2026.2.0/.env.sample 	modified:  apps/gracelsy-cloudflared/2026.2.0/data.yml 	modified:  apps/gracelsy-cloudflared/2026.2.0/docker-compose.yml 	modified:  apps/gracelsy-dnsmgr/latest/data.yml 	modified:  apps/gracelsy-dnsmgr/latest/docker-compose.yml 	modified:  apps/gracelsy-easytier-web/2.5.0/data.yml 	modified:  apps/gracelsy-easytier/2.5.0/data.yml 	modified:  apps/gracelsy-fastsend/0.6.0/data.yml 	modified:  apps/gracelsy-firefox-browser/1147.0.4/data.yml 	modified:  apps/gracelsy-firefox-browser/1147.0.4/docker-compose.yml 	modified:  apps/gracelsy-gotab/1.4.5.6/data.yml 	modified:  apps/gracelsy-kvrocks/2.14.0/data.yml 	modified:  apps/gracelsy-kvrocks/2.14.0/docker-compose.yml 	modified:  apps/gracelsy-lunatv/latest/data.yml 	modified:  apps/gracelsy-lunatv/latest/docker-compose.yml 	modified:  apps/gracelsy-moontvplus/latest/data.yml 	modified:  apps/gracelsy-moontvplus/latest/docker-compose.yml 	modified:  apps/gracelsy-mtab/2.9.3/data.yml 	modified:  apps/gracelsy-mtab/2.9.3/docker-compose.yml 	modified:  apps/gracelsy-netease-api/v1.0.2/data.yml 	modified:  apps/gracelsy-netease-api/v1.0.2/docker-compose.yml 	modified:  apps/gracelsy-readeck/latest/data.yml 	modified:  apps/gracelsy-rustdesk-api-s3/latest/data.yml 	modified:  apps/gracelsy-termix/release-1.11.1/data.yml 	modified:  apps/gracelsy-termix/release-1.11.1/docker-compose.yml 	modified:  apps/gracelsy-tinyauth/4.1.0/data.yml 	modified:  apps/gracelsy-tinyauth/4.1.0/docker-compose.yml 	modified:  apps/gracelsy-v2raya-global/2.2.7.5/data.yml 	modified:  apps/gracelsy-v2raya-global/2.2.7.5/docker-compose.yml 	modified:  apps/gracelsy-v2raya/2.2.7.5/data.yml 	modified:  apps/gracelsy-v2raya/2.2.7.5/docker-compose.yml 	modified:  apps/gracelsy-vaultwarden-mysql/1.35.3/data.yml 	modified:  apps/gracelsy-vaultwarden-mysql/1.35.3/docker-compose.yml 	deleted:    apps/gracelsy-watchtower/1.7.1/.env.sample 	modifie

--- a/apps/gracelsy-1panel-apps/latest/data.yml
+++ b/apps/gracelsy-1panel-apps/latest/data.yml
@@ -3,29 +3,33 @@ additionalProperties:
     - default: ""
       edit: true
       envKey: IMAGE
-      labelEn: Docker Image
-      labelZh: Docker 镜像
+      label:
+        zh: Docker 镜像
+        en: Docker Image
       required: true
       type: text
     - default: ""
       edit: true
       envKey: PANEL_APP_PORT_HTTP
-      labelEn: Web Port
-      labelZh: Web 端口
+      label:
+        zh: Web 端口
+        en: Web Port
       required: true
       rule: paramPort
       type: number
     - default: ""
       edit: true
       envKey: DATA_PATH_INTERNAL
-      labelEn: Internal Data Path
-      labelZh: 内部数据路径
+      label:
+        zh: 内部数据路径
+        en: Internal Data Path
       required: true
       type: text
     - default: "Asia/Shanghai"
       edit: true
       envKey: TIME_ZONE
-      labelEn: Time Zone
-      labelZh: 时区
+      label:
+        zh: 时区
+        en: Time Zone
       required: true
       type: text
