--- a/apps/gracelsy-cloudflared/2026.2.0/docker-compose.yml
+++ b/apps/gracelsy-cloudflared/2026.2.0/docker-compose.yml
@@ -5,5 +5,7 @@ services:
     restart: always
     network_mode: host
     command: tunnel --no-autoupdate run --token ${CFD_TOKEN}
+    environment:
+      - TZ=${TIME_ZONE}
     labels:  
       createdBy: "Apps"
