--- a/apps/gracelsy-easytier-web/2.5.0/data.yml
+++ b/apps/gracelsy-easytier-web/2.5.0/data.yml
@@ -3,8 +3,9 @@ additionalProperties:
     - default: "11211"
       edit: true
       envKey: PANEL_APP_PORT_HTTP
-      labelEn: Web Port
-      labelZh: Web端口
+      label:
+        zh: Web端口
+        en: Web Port
       required: true
       rule: paramPort
       type: number
@@ -12,24 +13,33 @@ additionalProperties:
     - default: "Asia/Shanghai"
       edit: true
       envKey: TIME_ZONE
-      labelEn: Time Zone
-      labelZh: 时区
+      label:
+        zh: 时区
+        en: Time Zone
       required: true
       type: text
 
     - default: "admin"
       edit: true
       envKey: CONFIG_USER
-      labelEn: USER(The web console has two default accounts with the usernames and passwords admin and user respectively. Although these are regular accounts, their existence still requires attention.)
-      labelZh: 用户(Web 控制台有了两个默认账户，用户名与密码分别为admin和user。虽然这属于普通账户，但仍需留意其存在)
+      label:
+        zh: 用户
+        en: USER
+      description:
+        zh: Web 控制台有了两个默认账户，用户名与密码分别为admin和user。虽然这属于普通账户，但仍需留意其存在
+        en: The web console has two default accounts with the usernames and passwords admin and user respectively. Although these are regular accounts, their existence still requires attention.
       required: true
       type: text
 
     - default: "easytier"
       edit: false
       envKey: MACHINE_ID
-      labelEn: machine_id(Specify the machine code; if the machine code fails to be obtained, the configuration will be lost after a restart.)
-      labelZh: machine_id(指定机器码，若机器码获取失败会导致重启后配置丢失)
+      label:
+        zh: machine_id
+        en: machine_id
+      description:
+        zh: 指定机器码，若机器码获取失败会导致重启后配置丢失
+        en: Specify the machine code; if the machine code fails to be obtained, the configuration will be lost after a restart.
       required: true
       type: text
       random: true
@@ -37,15 +47,23 @@ additionalProperties:
     - default: "http://127.0.0.1:11211"
       edit: true
       envKey: API_HOST
-      labelEn: API Host
-      labelZh: API Host(反向代理的地址或http://ip:11211)
+      label:
+        zh: API Host
+        en: API Host
+      description:
+        zh: 反向代理的地址或http://ip:11211
+        en: Reverse proxy address or http://ip:11211
       required: true
       type: text     
 
     - default: "22020"
       edit: true
       envKey: CONFIG_SERVER_PORT
-      labelEn: CONFIG_SERVER_PORT(Configuration delivery service port for easytier-core node connection)
-      labelZh: CONFIG_SERVER_PORT(用于 easytier-core 节点连接的配置下发服务端口)
+      label:
+        zh: CONFIG_SERVER_PORT
+        en: CONFIG_SERVER_PORT
+      description:
+        zh: 用于 easytier-core 节点连接的配置下发服务端口
+        en: Configuration delivery service port for easytier-core node connection
       required: true
       type: text
