--- a/apps/gracelsy-kvrocks/2.14.0/docker-compose.yml
+++ b/apps/gracelsy-kvrocks/2.14.0/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ${PANEL_APP_PORT_HTTP}:6666
     volumes:
       - ./data:/var/lib/kvrocks
+    environment:
+      - TZ=${TIME_ZONE}
     labels:
       createdBy: "Apps"
 
