--- a/apps/gracelsy-moontvplus/latest/docker-compose.yml
+++ b/apps/gracelsy-moontvplus/latest/docker-compose.yml
@@ -15,7 +15,8 @@ services:
       - REDIS_URL=${REDIS_CONNECT_URL}
       - NEXT_PUBLIC_ENABLE_REGISTER=${MOONTV_ENABLE_REGISTER}
       - NEXT_PUBLIC_SITE_NAME=${MOONTV_SITE_NAME}
-      - ANNOUNCEMENT=${MOONTV_ANNOUNCEMENT}  
+      - ANNOUNCEMENT=${MOONTV_ANNOUNCEMENT}
+      - TZ=${TIME_ZONE}
     networks:
       - 1panel-network
 
