--- a/apps/gracelsy-mtab/2.9.3/docker-compose.yml
+++ b/apps/gracelsy-mtab/2.9.3/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     user: "0"
     ports:
       - "${PANEL_APP_PORT_HTTP}:80"
+    environment:
+      - TZ=${TIME_ZONE}
     volumes:
       - "./data:/app"
     labels:  
