--- a/apps/gracelsy-termix/release-1.11.1/docker-compose.yml
+++ b/apps/gracelsy-termix/release-1.11.1/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     volumes:
       - ./data:/app/data
     environment:
-      PORT: "8080"
+      - PORT=8080
+      - TZ=${TIME_ZONE}
 
 networks:
   1panel-network:
