--- a/apps/gracelsy-v2raya-global/2.2.7.5/docker-compose.yml
+++ b/apps/gracelsy-v2raya-global/2.2.7.5/docker-compose.yml
@@ -25,3 +25,4 @@ services:
       - IPTABLES_MODE=legacy
       - V2RAYA_NFTABLES_SUPPORT=off
       - V2RAYA_V2RAY_BIN=/usr/local/bin/v2ray
+      - TZ=${TIME_ZONE}
