--- a/apps/gracelsy-vaultwarden-mysql/1.35.3/data.yml
+++ b/apps/gracelsy-vaultwarden-mysql/1.35.3/data.yml
@@ -7,17 +7,9 @@ additionalProperties:
         type: service
       default: mysql
       envKey: PANEL_VW_DB_TYPE
-      labelEn: Database Service
-      labelZh: 数据库服务
       label:
-        en: Database Service
-        ja: データベースサービス
-        ms: Perkhidmatan Pangkalan Data
-        pt-br: Serviço de Banco de Dados
-        ru: Сервис базы данных
-        ko: 데이터베이스 서비스
         zh: 数据库服务
-        zh-Hant: 數據庫 服務
+        en: Database Service
       required: true
       type: apps
       values:
@@ -28,17 +20,9 @@ additionalProperties:
 
     - default: vaultwarden
       envKey: PANEL_VW_DB_NAME
-      labelEn: Database Name
-      labelZh: 数据库名
       label:
-        en: Database Name
-        ja: データベース名
-        ms: Nama Pangkalan Data
-        pt-br: Nome do Banco de Dados
-        ru: Имя базы данных
-        ko: 데이터베이스 이름
         zh: 数据库名
-        zh-Hant: 數據庫名
+        en: Database Name
       required: true
       random: true
       rule: paramCommon
@@ -46,17 +30,9 @@ additionalProperties:
 
     - default: vaultwarden
       envKey: PANEL_VW_DB_USER
-      labelEn: Database User
-      labelZh: 数据库用户
       label:
-        en: Database User
-        ja: データベースユーザー
-        ms: Pengguna Pangkalan Data
-        pt-br: Usuário do Banco de Dados
-        ru: Пользователь базы данных
-        ko: 데이터베이스 사용자
         zh: 数据库用户
-        zh-Hant: 數據庫用戶
+        en: Database User
       required: true
       random: true
       rule: paramCommon
@@ -64,86 +40,58 @@ additionalProperties:
 
     - default: ""
       envKey: PANEL_VW_DB_PASSWORD
-      labelEn: Database Password
-      labelZh: 数据库密码
       label:
-        en: Database Password
-        ja: データベースパスワード
-        ms: Kata Laluan Pangkalan Data
-        pt-br: Senha do Banco de Dados
-        ru: Пароль базы данных
-        ko: 데이터베이스 비밀번호
         zh: 数据库密码
-        zh-Hant: 數據庫密碼
+        en: Database Password
       required: true
       random: true
       type: password
 
     - default: 3306
       envKey: PANEL_VW_DB_PORT
-      labelEn: Database Port
-      labelZh: 数据库端口
       label:
-        en: Database Port
-        ja: データベースポート
-        ms: Pelabuhan Pangkalan Data
-        pt-br: Porta do Banco de Dados
-        ru: Порт базы данных
-        ko: 데이터베이스 포트
         zh: 数据库端口
-        zh-Hant: 數據庫連接埠
+        en: Database Port
       required: true
       rule: paramPort
       type: number
 
     - default: "https://vw.example.com/"
       envKey: PANEL_VW_DOMAIN
-      labelEn: Domain
-      labelZh: 域名 (反向代理时必填)
       label:
-        en: Domain (Required if using reverse proxy)
-        ja: ドメイン（リバースプロキシ使用時に必須）
-        ms: Domain (Diperlukan jika menggunakan reverse proxy)
-        pt-br: Domínio (obrigatório se usar proxy reverso)
-        ru: Домен (обязательно при использовании обратного прокси)
-        ko: 도메인 (리버스 프록시 사용 시 필수)
-        zh: 域名 (反向代理时必填)
-        zh-Hant: 域名 (反向代理時必填)
+        zh: 域名
+        en: Domain
+      description:
+        zh: 反向代理时必填
+        en: Required when using reverse proxy
       required: false
       type: text
       edit: true
 
     - default: ""
       envKey: PANEL_VW_ADMIN_TOKEN
-      labelEn: Admin Token
-      labelZh: 管理员令牌
       label:
-        en: Admin Token
-        ja: 管理者トークン
-        ms: Token Pentadbir
-        pt-br: Token do Administrador
-        ru: Токен администратора
-        ko: 관리자 토큰
         zh: 管理员令牌
-        zh-Hant: 管理員令牌
+        en: Admin Token
       required: false
       type: password
       edit: true
 
     - default: 80
       envKey: PANEL_APP_PORT_HTTP
-      labelEn: HTTP Port
-      labelZh: HTTP 端口
       label:
-        en: HTTP Port
-        ja: ポート
-        ms: Port
-        pt-br: Porta HTTP
-        ru: HTTP Порт
-        ko: HTTP 포트
         zh: HTTP 端口
-        zh-Hant: HTTP 連接埠
+        en: HTTP Port
       required: true
       rule: paramPort
       type: number
       edit: true
+
+    - default: "Asia/Shanghai"
+      edit: true
+      envKey: TIME_ZONE
+      label:
+        zh: 时区
+        en: Time Zone
+      required: true
+      type: text
