--- a/apps/gracelsy-cloudflared/2026.2.0/data.yml
+++ b/apps/gracelsy-cloudflared/2026.2.0/data.yml
@@ -3,10 +3,17 @@ additionalProperties:
     - default: ''
       edit: true
       envKey: CFD_TOKEN
-      labelEn: Token
-      labelZh: Token
       label:
-        en: Token
         zh: Token
+        en: Token
+      required: true
+      type: text
+
+    - default: "Asia/Shanghai"
+      edit: true
+      envKey: TIME_ZONE
+      label:
+        zh: 时区
+        en: Time Zone
       required: true
       type: text
