--- a/apps/gracelsy-firefox-browser/1147.0.4/docker-compose.yml
+++ b/apps/gracelsy-firefox-browser/1147.0.4/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Asia/Shanghai
+      - TZ=${TIME_ZONE}
       - CUSTOM_USER=${HTTP_USER}
       - PASSWORD=${HTTP_PWD}
     shm_size: ${MEM_USE}
