--- a/apps/gracelsy-lunatv/latest/docker-compose.yml
+++ b/apps/gracelsy-lunatv/latest/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - NEXT_PUBLIC_ENABLE_REGISTER=${MOONTV_ENABLE_REGISTER}
       - NEXT_PUBLIC_SITE_NAME=${MOONTV_SITE_NAME}
       - ANNOUNCEMENT=${MOONTV_ANNOUNCEMENT}
+      - TZ=${TIME_ZONE}
     networks:
       - 1panel-network
 
