--- a/apps/gracelsy-rustdesk-api-s3/latest/data.yml
+++ b/apps/gracelsy-rustdesk-api-s3/latest/data.yml
@@ -3,8 +3,9 @@ additionalProperties:
     - default: "21114"
       edit: false
       envKey: PANEL_APP_PORT_HTTP
-      labelEn: Web Port
-      labelZh: Web端口
+      label:
+        zh: Web端口
+        en: Web Port
       required: true
       rule: paramPort
       type: number
@@ -12,39 +13,53 @@ additionalProperties:
     - default: "Asia/Shanghai"
       edit: true
       envKey: TIME_ZONE
-      labelEn: Time Zone
-      labelZh: 时区
+      label:
+        zh: 时区
+        en: Time Zone
       required: true
       type: text
 
     - default: "domian.com:21116"
       edit: true
       envKey: RUSTDESK_ID_SERVER
-      labelEn: RustDesk ID Server
-      labelZh: RustDesk ID服务器(用于网页客服端连接)
+      label:
+        zh: RustDesk ID服务器
+        en: RustDesk ID Server
+      description:
+        zh: 用于网页客服端连接
+        en: For web client connection
       required: true
       type: text
 
     - default: "domian.com:21117"
       edit: true
       envKey: RUSTDESK_RELAY_SERVE
-      labelEn: RustDesk Relay Server
-      labelZh: RustDesk 中继服务器(用于网页客服端连接)
+      label:
+        zh: RustDesk 中继服务器
+        en: RustDesk Relay Server
+      description:
+        zh: 用于网页客服端连接
+        en: For web client connection
       required: true
       type: text
 
     - default: "https://domian.com"
       edit: true
       envKey: RUSTDESK_API_SERVER
-      labelEn: RustDesk API Server
-      labelZh: Rustdesk的api服务器地址
+      label:
+        zh: Rustdesk的api服务器地址
+        en: RustDesk API Server
       required: true
       type: text
 
     - default: "wss://domian.com"
       edit: true
       envKey: RUSTDESK_WS_HOST
-      labelEn: RustDesk WS Host
-      labelZh: RustDesk WS Host(用于网页客服端连接)
+      label:
+        zh: RustDesk WS Host
+        en: RustDesk WS Host
+      description:
+        zh: 用于网页客服端连接
+        en: For web client connection
       required: true
       type: text
