--- a/apps/gracelsy-termix/release-1.11.1/data.yml
+++ b/apps/gracelsy-termix/release-1.11.1/data.yml
@@ -1,21 +1,19 @@
 additionalProperties:
   formFields:
-    # HTTP 端口
     - default: 28324
       envKey: PANEL_APP_PORT_HTTP
-      labelEn: HTTP Port
-      labelZh: HTTP 端口
       label:
-        en: HTTP Port
-        ja: HTTPポート
-        ms: Port HTTP
-        pt-br: Porta HTTP
-        ru: HTTP порт
-        ko: HTTP 포트
         zh: HTTP 端口
-        zh-Hant: HTTP 連接埠
+        en: HTTP Port
       required: true
       rule: paramPort
       type: number
 
-    
+    - default: "Asia/Shanghai"
+      edit: true
+      envKey: TIME_ZONE
+      label:
+        zh: 时区
+        en: Time Zone
+      required: true
+      type: text
