--- a/apps/gracelsy-tinyauth/4.1.0/data.yml
+++ b/apps/gracelsy-tinyauth/4.1.0/data.yml
@@ -3,8 +3,9 @@ additionalProperties:
     - default: 14389
       edit: true
       envKey: PANEL_APP_PORT_HTTP
-      labelEn: HTTP Port
-      labelZh: HTTP 端口
+      label:
+        zh: HTTP 端口
+        en: HTTP Port
       required: true
       rule: paramPort
       type: number
@@ -12,32 +13,42 @@ additionalProperties:
     - default: "https://auth.example.com"
       edit: true
       envKey: PANEL_TINYAUTH_APP_URL
-      labelEn: App URL
-      labelZh: 应用地址(请替换域名,注意必须是二级域名)
+      label:
+        zh: 应用地址
+        en: App URL
+      description:
+        zh: 请替换域名,注意必须是二级域名
+        en: Please replace the domain, note that it must be a second-level domain
       required: true
       type: text
 
     - default: ""
       edit: true
       envKey: BACKGROUND_IMAGE
-      labelEn: BACKGROUND_IMAGE
-      labelZh: 登录页面的背景图片URL
+      label:
+        zh: 登录页面的背景图片URL
+        en: BACKGROUND_IMAGE
       required: false
       type: text
 
     - default: ""
       edit: true
       envKey: NAME
-      labelEn: Name of the OAuth provider
-      labelZh: OAuth提供者的名称
+      label:
+        zh: OAuth提供商I的名称
+        en: Name of the OAuth provider
       required: false
       type: text
 
     - default: "github"
       edit: true
       envKey: OAUTH
-      labelEn: Auth提供商ID
-      labelZh: Auth提供商ID（仅填写一个，如果为github或google，后面参数仅需要填写client_id和client_secret）
+      label:
+        zh: 提供商ID
+        en: Provider ID
+      description:
+        zh: 仅填写一个，如果为github或google，后面参数仅需要填写client_id和client_secret
+        en: Fill in only one. If it is github or google, you only need to fill in client_id and client_secret
       required: false
       type: text
 
@@ -45,55 +56,74 @@ additionalProperties:
     - default: ""
       edit: true
       envKey: CLIENT_ID
-      labelEn: CLIENT_ID
-      labelZh: 客户端ID （CLIENT_ID）
+      label:
+        zh: 客户端ID（CLIENT_ID）
+        en: CLIENT_ID
       required: false
       type: text
 
     - default: ""
       edit: true
       envKey: CLIENT_SECRET
-      labelEn: CLIENT_SECRET
-      labelZh: 客户端密钥 （CLIENT_SECRET）
+      label:
+        zh: 客户端密钥（CLIENT_SECRET）
+        en: CLIENT_SECRET
       required: false
       type: text
 
     - default: ""
       edit: true
       envKey: AUTH_URL
-      labelEn: Auth URL
-      labelZh: 认证地址 （Auth URL）
+      label:
+        zh: 认证地址 （Auth URL）
+        en: Auth URL
       required: false
       type: text
 
     - default: ""
       edit: true
       envKey: TOKEN_URL
-      labelEn: Token URL
-      labelZh: 令牌地址 （TOKEN_URL）
+      label:
+        zh: 令牌地址 （TOKEN_URL）
+        en: Token URL
       required: false
       type: text
 
     - default: ""
       edit: true
       envKey: USER_INFO
-      labelEn: USER_INFO
-      labelZh: 用户信息地址（USER_INFO）
+      label:
+        zh: 用户信息地址（USER_INFO）
+        en: USER_INFO
       required: false
       type: text
 
     - default: "openid profile email offline_access"
       edit: true
       envKey: SCOPES
-      labelEn: SCOPES
-      labelZh: 授权权限范围（SCOPES）
+      label:
+        zh: 授权权限范围（SCOPES）
+        en: SCOPES
       required: false
       type: text
 
     - default: ""
       edit: true
       envKey: OAUTH_WHITELIST
-      labelEn: OAUTH_WHITELIST
-      labelZh: Auth 白名单（逗号分隔的电子邮件地址白名单列表）
+      label:
+        zh: Auth 白名单
+        en: OAUTH_WHITELIST
+      description:
+        zh: 逗号分隔的电子邮件地址白名单列表
+        en: Comma-separated list of email address whitelists
       required: false
+      type: text
+
+    - default: "Asia/Shanghai"
+      edit: true
+      envKey: TIME_ZONE
+      label:
+        zh: 时区
+        en: Time Zone
+      required: true
       type: text
