--- a/apps/gracelsy-v2raya/2.2.7.5/data.yml
+++ b/apps/gracelsy-v2raya/2.2.7.5/data.yml
@@ -3,11 +3,9 @@ additionalProperties:
     - default: 2017
       edit: true
       envKey: PANEL_APP_PORT_HTTP
-      labelZh: WebUI 端口
-      labelEn: WebUI Port
       label:
-        en: WebUI port
         zh: WebUI 端口
+        en: WebUI Port
       required: true
       rule: paramPort
       type: number
@@ -15,11 +13,9 @@ additionalProperties:
     - default: 20170
       edit: true
       envKey: SOCKS5_PROXY_PORT
-      labelZh: Socks5 代理端口
-      labelEn: Socks5 Proxy Port
       label:
-        en: Socks5 Proxy Port
         zh: Socks5 代理端口
+        en: Socks5 Proxy Port
       required: true
       rule: paramPort
       type: number
@@ -27,11 +23,9 @@ additionalProperties:
     - default: 20171
       edit: true
       envKey: HTTP_PROXY_PORT
-      labelZh: WebUI 端口
-      labelEn: WebUI port
       label:
-        en: HTTP Proxy Port
         zh: HTTP 代理端口
+        en: HTTP Proxy Port
       required: true
       rule: paramPort
       type: number
@@ -39,14 +33,18 @@ additionalProperties:
     - default: 20172
       edit: true
       envKey: HTTP_SHUNT_PROXY_PORT
-      labelZh: HTTP 代理端口(带分流规则)
-      labelEn: HTTP Port(Usage Shunt Rule)
       label:
-        en: HTTP Port
-        zh: HTTP 代理端口
-      description:
-        en: Usage Shunt Rule
-        zh: 带分流规则
+        zh: HTTP 代理端口(带分流规则)
+        en: HTTP Port(Usage Shunt Rule)
       required: true
       rule: paramPort
       type: number
+
+    - default: "Asia/Shanghai"
+      edit: true
+      envKey: TIME_ZONE
+      label:
+        zh: 时区
+        en: Time Zone
+      required: true
+      type: text
